k8s/manifest/app-api.yaml
# app-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-api
  template:
    metadata:
      labels:
        app: app-api
    spec:
      containers:
      - name: app-api
        image: app_api:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
---
# app-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-api-service
spec:
  selector:
    app: app-api
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
