k8s/manifest/gemini-api.yaml
# gemini-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemini-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gemini-api
  template:
    metadata:
      labels:
        app: gemini-api
    spec:
      containers:
      - name: gemini-api
        image: gemini_api:1.0.0
        ports:
        - containerPort: 8001
---
# gemini-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gemini-api-service
spec:
  selector:
    app: gemini-api
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
