k8s/manifest/app-client-ingress.yaml
# app-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-client-ingress
spec:
  rules:
  - host: "app-client.minikube.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-client-service
            port:
              number: 80
