k8s/manifest/app-client.yaml
# app-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-client
  template:
    metadata:
      labels:
        app: app-client
    spec:
      containers:
        - name: app-api
          image: app_client:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---

# app-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-client-service
spec:
  selector:
    app: app-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

# app-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-client-service
                port:
                  number: 80
